--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,7 @@
     @apply bg-background font-archivo text-foreground;
   }
 }
+
+@utility container {
+  @apply max-w-[1248px] mx-auto px-5 lg:px-2;
+}
